--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <HTML>
 <TITLE>Zinzan's Portfolio</TITLE>
 <BODY>
-This is a porfolio
+I am currently studying Games Computing at Northumbria University, in May I will graduate with a First Class BSc.
 </BODY>
 
