--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <HTML>
 <TITLE>Zinzan's Portfolio</TITLE>
+<H1>Zinzan's Portfolio</H1>
 <BODY>
 I am currently studying Games Computing at Northumbria University, in May I will graduate with a First Class BSc.
 </BODY>
