--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
+<!DOCTYPE html>
 <HTML>
+<HEAD>
 <TITLE>Zinzan's Portfolio</TITLE>
-<H1 style="color:blue;">Zinzan's Portfolio</H1>
+<LINK rel="stylesheet" type="text/css" href="style.css">
+</style>
+</HEAD>
+<BODY>
+<H1 style="text-align: center; color:blue;">
+Zinzan's Portfolio</H1>
 <BODY>
 I am currently studying Games Computing at Northumbria University, in May I will graduate with a First Class BSc.
 </BODY>
