--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </style>
 </HEAD>
 <BODY>
-<H1>
+<H1 style="text-align: center; color:blue;">
 Zinzan's Portfolio</H1>
 <p>
 I am currently studying Games Computing at Northumbria University, in May I will graduate with a First Class BSc.
