--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <HTML>
 <HEAD>
 <TITLE>Zinzan's Portfolio</TITLE>
+<LINK rel="stylesheet" type="text/css" href="style.css">
+</style>
 </HEAD>
 <BODY>
 <H1 style="text-align: center; color:blue;">
