--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 </style>
 </HEAD>
 <BODY>
-<H1>
-Zinzan's Portfolio</H1>
+<h1>
+Zinzan's Portfolio</h1>
 <p>
 I am currently studying Games Computing at Northumbria University, in May I will graduate with a First Class BSc.
 </p>
