--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <HTML>
 <HEAD>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <TITLE>Zinzan's Portfolio</TITLE>
 <LINK rel="stylesheet" type="text/css" href="style.css">
 </style>
