--- a/index.html
+++ b/index.html
@@ -13,3 +13,5 @@ Zinzan's Portfolio</h1>
 I am currently studying Games Computing at Northumbria University, in May I will graduate with a First Class BSc.
 </p>
 
+</BODY>
+</HTML>
