--- a/index.html
+++ b/index.html
@@ -7,11 +7,29 @@
 </style>
 </HEAD>
 <BODY>
-<h1>
-Zinzan's Portfolio</h1>
-<p>
-I am currently studying Games Computing at Northumbria University, in May I will graduate with a First Class BSc.
-</p>
+
+<h1 style="text-align: center;"><img style="border-style: double;" src="https://avatars.githubusercontent.com/u/62564996?v=4" alt="" width="119" height="119" /></h1>
+<h1 style="text-align: center;">Zinzan's Portfolio</h1>
+<p style="text-align: center;">I am currently studying Games Computing at Northumbria University, in May I will graduate with a First Class BSc.</p>
+<h3 style="text-align: left;">Final Year</h3>
+<h4 style="text-align: left;">Luck vs Skill Based Player Engagement</h4>
+<p>Skill based ball drop game. Luck based spin wheel game.</p>
+<h4>3D Graphics Programming</h4>
+<p>Programming using PS4 Dev kits in PSSL (Playstation Shader Language)&nbsp;</p>
+<h4>Space Rocks 3D ~ Programming Unreal using c++</h4>
+<p>Creating a game in unreal utilising c++</p>
+<h4>Anything with Wheels Group Project&nbsp;</h4>
+<p>Solo Developer of the group chair racing game</p>
+<p><a href="https://zogsf.itch.io/anything-with-wheels">https://zogsf.itch.io/anything-with-wheels</a>&nbsp;</p>
+<h3>Penultimate Year</h3>
+<h4>Ninja Side Scroller</h4>
+<p>Programmed a Ninja themed side-scrolling point and click shooter using the Hornet Engine (a simple game engine developed by Chris Rook at Northumbria)</p>
+<h4>Raby Castle Consultancy Project</h4>
+<p>A simple drag and drop castle development game. The player can place the main hall of Raby Castle and then progress through time, unlocking more buildings at milestones which in turn allows the castle to grow and develop like it did through the past couple hundered years.</p>
+<h4>GymNote app</h4>
+<p>A simple journalling app that allows users to track their gains in the gym easily and in one place.&nbsp;</p>
+<p>GymNote Website : <a href="https://w22066007.nuwebspace.co.uk">https://w22066007.nuwebspace.co.uk</a>&nbsp;</p>
+<p>GymNote App : <a href="https://w22066007.nuwebspace.co.uk/gymnote/">https://w22066007.nuwebspace.co.uk/gymnote/</a>&nbsp;</p>
 
 </BODY>
 </HTML>
